Feature: Bumper java til java 15 og tar i bruk records for kontrakter. (#623)
* Feature: Bumper java til 15 og erstatter DTO med records.

* Bruker records for hendelsesDtoene og fjerner bruk av Junit 4.

* Rydder